--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,24 @@
 <head>
   <link href="https://vjs.zencdn.net/7.20.1/video-js.css" rel="stylesheet" />
-
-  <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-  <!-- <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script> -->
+  <link rel="stylesheet" href="style.css" />
+  <title>Video Test</title>
 </head>
 
 <body>
-  <video
-    autoplay=""
-    muted=""
-    loop=""
-    playsinline=""
-    id="vid"
-    preload="auto"
-    width="100%"
-    height="100%"
-    controls
-  >
-    <source src="video.mp4" type="video/mp4" />
-  </video>
+  <div class="container">
+    <div class="c-video">
+      <video class="video" src="video.mp4"></video>
+      <div class="controls">
+        <div class="orange-bar">
+          <div class="orange-juice"></div>
+        </div>
+        <div class="buttons">
+          <button id="play-pause"></button>
+          <button id="skip-forward"></button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
+<script src="script.js"></script>
